--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,19 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type='submit'>Login</button>
-</form>
+<div class="max-w-lg mx-auto">
+    <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type='submit' class="w-full text-yellow-300 bg-blue-500 hover:bg-yellow-300 hover:text-blue-500 px-3 py-2 rounded-md">
+            Login
+        </button>
+    </form>
+    <div class="mt-5">
+        <a class="hover:text-blue-500 mt-3" href="{% url 'reset-password' %}">¿Olvidaste tu password?</a>
+    </div>
+</div>
 
 {% endblock content %}
