--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -4,22 +4,19 @@
 {% block content %}
 
 <div class="max-w-lg mx-auto">
-    <a class="hover:text-blue-500" href="{% url 'leads:lead-list' %}">
-        Volver
-    </a>
-    <div class="mt-5">
-        <h1 class="text-4xl text-gray-800">Nuevo lead</h1>
-    </div>
-    <form method="post" class="mt-5">
+    <h1 class="text-4xl text-gray-800">
+        Ingresá tu nuevo password
+    </h1>
+
+    <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
         <button type='submit' class="w-full text-yellow-300 bg-blue-500 hover:bg-yellow-300 hover:text-blue-500 px-3 py-2 rounded-md">
-            Crear
+            Confirmar password
         </button>
     </form>
 </div>
+
+
+
 {% endblock content %}
-
-
-
-
