--- a/leads/templates/leads/assign_agent.html
+++ b/leads/templates/leads/assign_agent.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <a href="{% url 'leads:lead-list' %}">Volver</a>
-    <hr />
-    <h1>Asignar agente a este lead</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Asignar</button>
-    </form>
+    <div class="max-w-lg mx-auto">
+        <a class="hover:text-blue-500" href="{% url 'leads:lead-list' %}">
+            Volver
+        </a>
+        <div class="mt-5">
+            <h1 class="text-4xl text-gray-800">Asignar agente a este lead</h1>
+        </div>
+        <form method="post" class="mt-5">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type='submit' class="w-full text-yellow-300 bg-blue-500 hover:bg-yellow-300 hover:text-blue-500 px-3 py-2 rounded-md">
+                Asignar
+            </button>
+        </form>
+    </div>
 {% endblock content %}
