--- a/leads/templates/leads/category_detail.html
+++ b/leads/templates/leads/category_detail.html
@@ -9,6 +9,12 @@
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
         Estos son los leads en esta categoría
         </p>
+        <a href="{% url 'leads:category-update' category.pk %}" class="hover:text-blue-500">
+          Actualizar
+        </a>
+        <a href="{% url 'leads:category-delete' category.pk %}" class="hover:text-blue-500">
+          Eliminar
+        </a>
     </div>
     <div class="lg:w-2/3 w-full mx-auto overflow-auto">
       <table class="table-auto w-full text-left whitespace-no-wrap">
