--- a/leads/templates/leads/category_list.html
+++ b/leads/templates/leads/category_list.html
@@ -9,6 +9,9 @@
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
         Estas categorías segmentan a los leads
         </p>
+        <a href="{% url 'leads:category-create' %}" class="hover:text-blue-500">
+          Crear categoría
+        </a>
     </div>
     <div class="lg:w-2/3 w-full mx-auto overflow-auto">
       <table class="table-auto w-full text-left whitespace-no-wrap">
@@ -29,7 +32,7 @@
                   <td class="px-4 py-3">
                     <a href="{% url 'leads:category-detail' category.pk %}">{{ category.name }}</a>
                   </td>
-                    <td class="px-4 py-3">TODO Contador</td>
+                    <td class="px-4 py-3">{{ category.lead_count }}</td>
                     </td>
                 </tr>
             {% endfor %}
